@@ -11,10 +11,12 @@ Hedderich and Sachs (2018), ISBN:978-3-662-56657-2) including bootstrapped
 versions (Davison and Hinkley (1997), ISBN:978-0-511-80284-3) as well as 
 Hsu (Hedderich and Sachs (2018), ISBN:978-3-662-56657-2), 
 permutation (Janssen (1997), <doi:10.1016/S0167-7152(97)00043-6>), 
-bootstrap (Davison and Hinkley (1997), ISBN:978-0-511-80284-3) and 
-multiple imputation (Barnard and Rubin (1999), <doi:10.1093/biomet/86.4.948>) t-test
-and Wilcoxon tests. Graphical visualization by volcano and Bland-Altman plots 
-(Bland and Altman (1986), <doi:10.1016/S0140-6736(86)90837-8>; Shieh (2018), <doi:10.1186/s12874-018-0505-y>).
+bootstrap (Davison and Hinkley (1997), ISBN:978-0-511-80284-3), intersection-union 
+(Sozu et al. (2015), ISBN:978-3-319-22005-5) and multiple imputation 
+(Barnard and Rubin (1999), <doi:10.1093/biomet/86.4.948>) t-test; furthermore, 
+computation of intersection-union z-test as well as multiple imputation Wilcoxon tests. 
+Graphical visualization by volcano and Bland-Altman plots (Bland and Altman (1986), 
+<doi:10.1016/S0140-6736(86)90837-8>; Shieh (2018), <doi:10.1186/s12874-018-0505-y>).
 }
 \details{
 library(MKinfer)
